*******************************************************************************
Version 1.6.7
*******************************************************************************

2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	Fix compilation error in upnp/src/inc/ssdplib.h when compiling in OS X
	(the netinet/* headers are not available).

	Patch submitted by Chandra (inactiveneurons).

2010-09-07 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	Fix compilation error in ixml/inc/ixml.h when compiling with an
	Objective-C compiler (when cross-compiling for iPhone devices).

	Patch submitted by Chandra (inactiveneurons).

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* Issue regarding the GENA notifications. A string termination indicator
	was added at the end of the notification ("\r\n") in
	notify_send_and_recv() in upnp/src/gena/gena_device.c.
	Patch by Fabrice Fontaine.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* The last part of Ronan Menard's patch.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* upnp/src/ssdp/ssdp_device.c: Fix for IPV6 ULA/GUA issues.
	* upnp/src/ssdp/ssdp_ctrlpt.c: Fix for IPV6 ULA/GUA issues.
	* upnp/src/ssdp/ssdp_server.c: Fix for IPV6 ULA/GUA issues.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* upnp/src/genlib/miniserver/miniserver.c: Fix for IPV6 ULA/GUA issues.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* gena_subscribe(): Fix for IPV6 ULA/GUA issues.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* SOCKET ssdpSock6UlaGua: created variable for later use.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* SSDP_IPV6_SITELOCAL: new macro.
	
	Patch submitted by Ronan Menard.

2010-08-21 Marcelo Jimenez <mroberto(at)users.sourceforge.net>